Fixed the sticky footer on the small screen and changed the target of the social buttons to blank page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
         <ul class="hero-social-list">
             {% if site.github_username %}
             <li>
-                <a class="github" href="https://github.com/{{ site.github_username }}">
+                <a class="github" target="_blank" href="https://github.com/{{ site.github_username }}">
                     <i class="fa fa-github"></i>
                 </a>
             </li>
@@ -28,7 +28,7 @@ layout: default
 
             {% if site.linkedin_username %}
             <li>
-                <a class="linkedin" href="https://linkedin.com/in/{{ site.linkedin_username }}">
+                <a class="linkedin" target="_blank" href="https://linkedin.com/in/{{ site.linkedin_username }}">
                     <i class="fa fa-linkedin"></i>
                 </a>
             </li>
@@ -36,7 +36,7 @@ layout: default
 
             {% if site.facebook_username %}
             <li>
-                <a class="facebook" href="https://www.facebook.com/{{ site.facebook_username }}">
+                <a class="facebook" target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
                     <i class="fa fa-facebook"></i>
                 </a>
             </li>
