Added the projects link,template and few project posts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: default
         </ul>
         <div class="call-to-action-block">
             <a href="{{ site.baseurl }}/blog">Blog</a>
+            <a href="{{ site.baseurl }}/projects">Work</a>
         </div>
         <ul class="hero-social-list">
             {% if site.github_username %}
